--- a/client/index.html
+++ b/client/index.html
@@ -8,13 +8,13 @@
     <meta property="og:description" content="Transform your call center with AI voice agents. Reduce costs and improve customer experience with C&G CORP." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.cygbpo.com" />
-    <meta property="og:image" content="https://www.cygbpo.com/logo_final.png" />
+    <meta property="og:image" content="https://www.cygbpo.com/assets/logo_nav-Dey1-2f_.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="C&G CORP - AI Voice Agents" />
     <meta name="twitter:description" content="Transform your call center with AI voice agents. Reduce costs and improve customer experience with C&G CORP." />
-    <meta name="twitter:image" content="https://www.cygbpo.com/logo_final.png" />
+    <meta name="twitter:image" content="https://www.cygbpo.com/assets/logo_nav-Dey1-2f_.png" />
 
     <link rel="icon" type="image/png" href="/logo_nav.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
