--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,7 @@
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="C&G CORP - AI Voice Agents" />
+    <meta name="twitter:title" content="C&G CORP SAS" />
     <meta name="twitter:description" content="Transform your call center with AI voice agents. Reduce costs and improve customer experience with C&G CORP." />
     <meta name="twitter:image" content="https://www.cygbpo.com/logo_final.png" />
 
